--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,14 @@ header{
 .burger-menu{
     font-size: x-large;
 }
+
+.jumbotron{
+    background-color: #1abc9c;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.jumbo-img *{
+    width: 200px;
+    padding-bottom: 20px;
+}
