--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,21 @@ img{
     max-width: 100%;
 }
 
+
+.logo h2{
+    margin: 0;
+    vertical-align: middle;
+}
+
 .menu{
     text-align: right;
+    height: 100%;
+    
+}
+
+.list-menu{
+    margin: 0;
+    vertical-align: middle;
 }
 
 .list-menu * {
@@ -39,6 +52,17 @@ img{
     border-radius: 20px;
     overflow: hidden;
 } 
+
+.about{
+    background-color: #1abc9c;
+    padding: 20px 0;
+    color: white;
+}
+
+.my_container{
+    width: 60%;
+    margin: auto;
+}
 
 
 
