--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,9 @@ img{
     vertical-align: middle;
 }
 
-.list-menu * {
+ul li{
     list-style-type:none;
-    display: inline-block;
+    /* display: inline-block; */
 }
 .burger-menu{
     font-size: x-large;
@@ -64,5 +64,17 @@ img{
     margin: auto;
 }
 
+.contact{
+    padding: 20px 0;
+}
 
+.form{
+    margin-bottom: 40px;
+}
 
+.btn{
+    background-color: #1abc9c;
+    border-radius: 10px;
+    padding: 5px;
+    color: white;
+}
