--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 header{
     background-color: #2c3e50 ;
-    color: white ;
+    color: #ffffff ;
+    padding: 20px 0;
 }
 
 img{
@@ -16,6 +17,7 @@ img{
 .menu{
     text-align: right;
     height: 100%;
+    font-weight:600;
     
 }
 
@@ -26,7 +28,7 @@ img{
 
 ul li{
     list-style-type:none;
-    /* display: inline-block; */
+    display: inline-block;  
 }
 .burger-menu{
     font-size: x-large;
@@ -55,7 +57,7 @@ ul li{
 
 .about{
     background-color: #1abc9c;
-    padding: 20px 0;
+    padding: 20px 0; 
     color: white;
 }
 
@@ -65,16 +67,45 @@ ul li{
 }
 
 .contact{
-    padding: 20px 0;
+    padding: 35px 0;
 }
 
 .form{
-    margin-bottom: 40px;
+    margin: 10px 0 40px;
+    padding:0;
+}
+
+.form li{
+    display: block;
 }
 
 .btn{
     background-color: #1abc9c;
-    border-radius: 10px;
-    padding: 5px;
+    border-radius: 5px;
+    padding: 5px 10px;
     color: white;
+}
+
+footer{
+    background-color: #3a546d ;
+    color: white;
+}
+
+.contact-details{
+    padding: 25px;
+}
+
+
+
+@media screen and (min-width:768px) {
+    .contact-details{
+        margin-bottom: 0;
+    }
+}
+
+.copyright{
+    margin-top: 20px;
+    padding: 20px;
+    background-color: #2c3e50;
+    text-align: center;
 }
