--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,8 @@ ul li{
 .jumbotron{
     background-color: #1abc9c;
     text-align: center;
-    padding: 20px 0;
+    padding: 30px 0;
+    color: white;
 }
 
 .jumbo-img *{
