--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,17 @@ footer{
     background-color: #2c3e50;
     text-align: center;
 }
+
+.social-icon{
+    width: 45px;
+    height: 45px;
+    display: inline-block;
+    border-radius: 50%;
+    border: 1px solid white;
+}
+
+.social-icon i{
+    line-height: 45px;
+}
+
+.highlight-text{color:#1abc9c}
