--- a/css/style.css
+++ b/css/style.css
@@ -124,3 +124,15 @@ footer{
 }
 
 .highlight-text{color:#1abc9c}
+
+input[type="text"],
+input[type="email"],
+input[type="number"],
+.form-group textarea
+{
+    border-top: 0;
+    border-right: 0;
+    border-left: 0;
+    padding: 15px 0 10px;
+
+}
